--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar Github Dasar</title>
 </head>
+<title>Belajar Github Dasar</title>
+
 
 <body>
 
