--- a/index.html
+++ b/index.html
@@ -6,11 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar Github Dasar</title>
+    <link rel="stylesheet" href="./index.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-+4j30LffJ4tgIMrq9CwHvn0NjEvmuDCOfk6Rpg2xg7zgOxWWtLtozDEEVvBPgHqE" crossorigin="anonymous">
+
 </head>
 <title>Belajar Github Dasar</title>
 
-
 <body>
+
+<!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Tutorial</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Forum</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Fitur</a>
+              </li>
+            </ul>
+        </div>
+      </nav>
+
+<!-- End Navbar -->
+
+<!-- Card Body -->
+<div class="container-sm">
+<div class="card-body bg-secondary">
+   <h1 class="mb-3 me-3">Apa Itu Git</h1><hr>
+   <div class="row">
+    <div class="col-12">
+        <img src="./images/git1.png" class="img-fluid rounded-2" alt="Github"><hr>
+    </div>
+    <div class="col-5 me-3">
+        <h2>Pengertian Git</h2>
+        <p>Git adalah salah satu sistem pengontrol versi (Version Control System) pada proyek perangkat lunak yang diciptakan oleh Linus Torvalds. Pengontrol versi bertugas mencatat setiap perubahan pada file proyek yang dikerjakan oleh banyak orang maupun sendiri.</p>
+        <p> Git dikenal juga dengan distributed revision control (VCS terdistribusi), artinya penyimpanan database Git tidak hanya berada dalam satu tempat saja.</p>
+        <img src="./images/git2.png" class="img-thumbnail mt-2 mb-3" alt="...">
+        <p class="mt-2">Semua orang yang terlibat dalam pengkodean proyek akan menyimpan database Git, sehingga akan memudahkan dalam mengelola proyek baik online maupun offline.</p>
+        <p>VCS terpusat memiliki beberapa kekurangan:</p>
+            <ul>
+                <li>Semua tim harus terkoneksi ke jaringan untuk mengakses source-code;</li>
+                <li>Tersimpan di satu tempat, nanti kalau server bermasalah bagaimana?</li>
+            </ul>
+        <p>Karena itu, Git hadir untuk menutupi kerkurangan yang dimiliki oleh VCS terpusat.</p>
+    </div>
+    <div class="col-6 me-4">
+        <h2>Bagaimana Cara Menggunakan Git?</h2>
+        <p>Ada beberapa langkah yang perlu dilakukan untuk menggunakan git yaitu :</p>
+        <ul>
+            <li><b>Membuat akun pada layanan github</li></b>
+                <p>Buka website github, buat akun baru terlebih dahulu</p>
+                <img src="./images/git3.png" class="img-thumbnail mt-2 mb-3" alt="...">
+                <p>Setelah terbuat akun-nya, login dengan akun baru(kalau langsung diarahkan ke halaman utama), setelah itu pada pojok kanan atas terdapat tombol <b>“+”</b>, klik button tersebut dan pilih <b>“new repository”.</b></p>
+            </li>
+            <li><b>Membuat Repositori online</b></li>
+        </ul>
+    </div>
+   </div>
+
+
+   </div>
+</div>
+</div>
+<!-- End Card Body -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 
